Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-582

Handle ApplicationMasterNotRegisteredException in libyarn

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 2.0.0.0-incubating
    • libyarn
    • None

    Description

      when catch an org.apache.hadoop.yarn.exceptions.ApplicationMasterNotRegisteredException exception, libyarn return not try again, so that hawq can re-register application to Hadoop Yarn.

      Attachments

        Activity

          People

            wlin Wen Lin
            wlin Wen Lin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: