HAWQ-582. Handle ApplicationMasterNotRegisteredException in libyarn